--- a/index.html
+++ b/index.html
@@ -156,29 +156,29 @@
               <ul class="person-list list">
                 <li class="person-soc-items">
                   <a href="#" class="person-soc-link">
-                    <svg class="instagram" width="20" height="20px">
+                    <svg class="person-soc-icons  instagram" width="20" height="20">
                       <use href="./images/icons.svg#icon-icons-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="person-soc-items">
                   <a href="#" class="person-soc-link">
-                    <svg class="instagram" width="20" height="20px">
-                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    <svg class="person-soc-icons twitter" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="person-soc-items">
                   <a href="#" class="person-soc-link">
-                    <svg class="instagram" width="20" height="20px">
-                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    <svg class="person-soc-icons facebook" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="person-soc-items">
                   <a href="#" class="person-soc-link">
-                    <svg class="instagram" width="20" height="20px">
-                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    <svg class="person-soc-icons linkedin" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -189,7 +189,36 @@
             <img width="270" src="./images/employee2.jpg" alt="Ольга Рєпіна" />
             <div class="person-info">
               <h3 class="name">Ольга Рєпіна</h3>
-              <p class="team-text">Frontend Developer</p>
+              <p class="team-text">Frontend Developer</p><ul class="person-list list">
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons  instagram" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons twitter" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons facebook" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons linkedin" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
@@ -201,6 +230,36 @@
             <div class="person-info">
               <h3 class="name">Микола Тарасов</h3>
               <p class="team-text">Marketing</p>
+              <ul class="person-list list">
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons  instagram" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons twitter" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons facebook" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons linkedin" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
@@ -212,18 +271,99 @@
             <div class="person-info">
               <h3 class="name">Михайло Єрмаков</h3>
               <p class="team-text">UI Designer</p>
+              <ul class="person-list list">
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons  instagram" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons twitter" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons facebook" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="person-soc-items">
+                  <a href="#" class="person-soc-link">
+                    <svg class="person-soc-icons linkedin" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
     </section>
+    <!-- Наші клієнти -->
+    <section class="section">
+      <div class="container">
+        <h2 class="title">Постійні клієнти</h2>
+        <ul class="clients-list list">
+          <li class="clients-items">
+                  <a href="#" class="clients-link">
+                    <svg class="clients-icons" width="106" height="60">
+                      <use href="./images/icons.svg#icon-icons-logo1"></use>
+                    </svg>
+                  </a>
+          </li>
+          <li class="clients-items">
+             <a href="#" class="clients-link">
+            <svg class="clients-icons" width="106" height="60">
+              <use href="./images/icons.svg#icon-icons-group2"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+             <a href="#" class="clients-link">
+            <svg class="clients-icons" width="106" height="60">
+              <use href="./images/icons.svg#icon-icons-logo3"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+             <a href="#" class="clients-link">
+            <svg class="clients-icons" width="106" height="60">
+              <use href="./images/icons.svg#icon-icons-logo4"></use>
+            </svg>
+           </a>
+          </li> 
+          <li class="clients-items">
+             <a href="#" class="clients-link">
+            <svg class="clients-icons" width="106" height="60">
+              <use href="./images/icons.svg#icon-icons-logo5"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+             <a href="#" class="clients-link">
+              <svg class="clients-icons" width="106" height="60">
+                <use href="./images/icons.svg#icon-icons-logo6"></use>
+              </svg>
+           </a>
+          </li>
+        
+      </div>
+    </section>
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container-footer">
+        <div class="first-section">
         <a href="./index.html" class="logo-footer"
           ><span class="logo-web">Web</span> Studio</a
-        >`
+        >
         <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
         <ul class="list">
           <li>
@@ -237,6 +377,40 @@
             >
           </li>
         </ul>
+        </div>
+        <div class="second-section">
+        <h3 class="title-soc-footer">приєднуйтесь</h3>
+        <ul class="footer-list list">
+                <li class="footer-soc-items">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icons  instagram" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-items">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icons twitter" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-items">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icons facebook" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-items">
+                  <a href="#" class="footer-soc-link">
+                    <svg class="footer-soc-icons linkedin" width="20" height="20">
+                      <use href="./images/icons.svg#icon-icons-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              </div>
       </div>
     </footer>
   </body>
