--- a/portfolio.html
+++ b/portfolio.html
@@ -28,22 +28,30 @@
           </a>
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="current link">Студія</a>
+              <a href="./index.html" class="link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
+              <a href="./portfolio.html" class="current link">Портфоліо</a>
             </li>
             <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.co" class="email"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.co" class="email">
+              <svg class="contacts-icons-email" width="16" height="12">
+                <use href="./images/icons.svg#icon-icons-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="number">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="number">
+              <svg class="contacts-icons-number" width="10" height="16">
+                <use href="./images/icons.svg#icon-icons-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -140,23 +148,58 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-footer"
-          ><span class="logo-web">Web</span> Studio</a
-        >`
-        <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.co" class="ft-mail contact-footer"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="ft-contact contact-footer"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+      <div class="container-footer">
+        <div class="first-section">
+          <a href="./index.html" class="logo-footer"
+            ><span class="logo-web">Web</span> Studio</a
+          >
+          <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.co" class="ft-mail contact-footer"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="ft-contact contact-footer"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="second-section">
+          <h3 class="title-soc-footer">приєднуйтесь</h3>
+          <ul class="footer-list list">
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link">
+                <svg class="footer-soc-icons instagram" width="20" height="20">
+                  <use href="./images/icons.svg#icon-icons-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link">
+                <svg class="footer-soc-icons twitter" width="20" height="20">
+                  <use href="./images/icons.svg#icon-icons-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link">
+                <svg class="footer-soc-icons facebook" width="20" height="20">
+                  <use href="./images/icons.svg#icon-icons-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link">
+                <svg class="footer-soc-icons linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#icon-icons-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
