--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     </header>
 
     <!-- головна-герой  -->
-    <main class="hero">
-      <div class="overlay">
+    <main class="main-hero">
+      <div class="hero">
         <h1 class="hero-tittle">
           Ефективні рішення для <br />
           вашого бізнесу
